--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 alabaster==1.0.0
+astroid==3.3.5
 attrs==24.2.0
 babel==2.16.0
 blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+dill==0.3.9
 docutils==0.21.2
 Flask==3.0.3
 gitdb==4.0.11
 GitPython==3.1.43
 idna==3.8
 imagesize==1.4.1
+isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -18,10 +21,13 @@ jsonschema-specifications==2023.12.1
 logging_tree==1.10
 Mako==1.3.5
 MarkupSafe==2.1.5
+mccabe==0.7.0
 packaging==24.1
+platformdirs==4.3.6
 pydmt==0.3.16
 pyfakeuse==0.0.8
 Pygments==2.18.0
+pylint==3.3.1
 pylogconf==0.0.37
 pymakehelper==0.0.30
 pytconf==0.1.14
@@ -39,6 +45,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 termcolor==2.4.0
+tomlkit==0.13.2
 urllib3==2.2.2
 venv-run==0.2.0
 Werkzeug==3.0.4
