--- a/app.yaml
+++ b/app.yaml
@@ -1,17 +1,5 @@
 runtime: python312
-
-automatic_scaling:
-  max_instances: 2
-
+entrypoint: gunicorn -b :$PORT src.main:app
 handlers:
-- url: /static/
-  static_dir: static/
-  secure: always
-- url: /favicon.ico
-  static_files: static/images/favicon.ico
-  upload: static/images/favicon.ico
-  secure: always
-- url: /
-  static_files: static/html/index.html
-  upload: static/html/index.html
-  secure: always
+- url: /.*
+  script: auto
